--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,8 @@
     <description>Backend</description>
     <properties>
         <java.version>11</java.version>
-        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.0</org.projectlombok.version>
-        <sonar.exclusions>**/mapper/*,**/exception/*,**/configuration/*,**/BackendApplication.java,**/Utilities.java</sonar.exclusions>
+        <sonar.exclusions>**/exception/*,**/configuration/*,**/BackendApplication.java,**/Utilities.java</sonar.exclusions>
     </properties>
     <dependencies>
         <dependency>
@@ -61,11 +60,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${org.mapstruct.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -79,16 +74,7 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-mapstruct-binding -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-mapstruct-binding</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>1.5.2.Final</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
